# ComputerShop

./: CMakeLists.txt  main.cpp
MemoryModel/Goods/: Computer.cpp  Computer.h
MemoryModel/Goods/Component/: Component.cpp  Component.h  GraphicsCard.cpp  GraphicsCard.h
MemoryModel/Storage/: ComponentsStorage.cpp  ComponentsStorage.h
